Elements step_3 completed

--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
   </head>
   <body>
     <div class="heading">
-        <h1>Welcome to FrontLoop Challenges</h1>
+      <h1>Welcome to FrontLoop Challenges</h1>
     </div>
-    <div class="links">
-        <a href="./loop_1/step_1/" target="_blank">Step_1</a><br />
-        <a href="./loop_1/step_2/" target="_blank">Step_2</a>
-    </div>
+    <ul id="listings">
+      <li id="elements">Elements</li>
+      <ul id="elementList">
+        <li><a href="./elements/loop_1/step_1/" target="_blank">step_1</a></li>
+        <li><a href="./elements/loop_1/step_2/" target="_blank">step_2</a></li>
+      </ul>
+      <li id="markups">Markups</li>
+      <ul id="markupsList">
+        <li><a href="./markups/loop_1/step_1/" target="_blank">Step_1</a></li>
+      </ul>
+    </ul>
   </body>
 </html>
