Added payment markup

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li id="markups">Markups</li>
       <ul id="markupsList">
         <li><a href="./markups/loop_1/step_1/" target="_blank">Step_1</a></li>
+        <li><a href="./markups/loop_1/step_2/" target="_blank">Step_2</a></li>
       </ul>
     </ul>
   </body>
