--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <ul id="markupsList">
         <li><a href="./markups/loop_1/step_1/" target="_blank">Step_1</a></li>
         <li><a href="./markups/loop_1/step_2/" target="_blank">Step_2</a></li>
+        <li><a href="./markups/loop_1/step_3/" target="_blank">Step_3</a></li>
       </ul>
     </ul>
   </body>
