Step 3 in elements completed

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <ul id="elementList">
         <li><a href="./elements/loop_1/step_1/" target="_blank">step_1</a></li>
         <li><a href="./elements/loop_1/step_2/" target="_blank">step_2</a></li>
+        <li><a href="./elements/loop_1/step_3/" target="_blank">step_3</a></li>
       </ul>
       <li id="markups">Markups</li>
       <ul id="markupsList">
