--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Index</title>
-  </head>
-  <body>
-    <div class="heading">
-      <h1>Welcome to FrontLoop Challenges</h1>
-    </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Index</title>
+</head>
+
+<body>
+  <div class="heading">
+    <h1>Welcome to FrontLoop Challenges</h1>
+  </div>
+  <div class="content_section">
     <ul id="listings">
-      <li id="elements">Elements</li>
-      <ul id="elementList">
-        <li><a href="./elements/loop_1/step_1/" target="_blank">step_1</a></li>
-        <li><a href="./elements/loop_1/step_2/" target="_blank">step_2</a></li>
-        <li><a href="./elements/loop_1/step_3/" target="_blank">step_3</a></li>
-      </ul>
-      <li id="markups">Markups</li>
-      <ul id="markupsList">
-        <li><a href="./markups/loop_1/step_1/" target="_blank">Step_1</a></li>
-        <li><a href="./markups/loop_1/step_2/" target="_blank">Step_2</a></li>
-        <li><a href="./markups/loop_1/step_3/" target="_blank">Step_3</a></li>
-      </ul>
+      <div class="link_list">
+        <ul id="elementList">
+          <li id="elements">Elements</li>
+          <li><a href="./elements/loop_1/step_1/" target="_blank">step_1</a></li>
+          <li><a href="./elements/loop_1/step_2/" target="_blank">step_2</a></li>
+          <li><a href="./elements/loop_1/step_3/" target="_blank">step_3</a></li>
+        </ul>
+        <ul id="markupsList">
+          <li id="markups">Markups</li>
+          <li><a href="./markups/loop_1/step_1/" target="_blank">Step_1</a></li>
+          <li><a href="./markups/loop_1/step_2/" target="_blank">Step_2</a></li>
+          <li><a href="./markups/loop_1/step_3/" target="_blank">Step_3</a></li>
+        </ul>
+      </div>
     </ul>
-  </body>
+  </div>
+</body>
+
 </html>
